methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:8: error: value greeen is not a member of object java.awt.Color
      if (getCouleurSol()==Color.greeen) {
                                 ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
    while (estSurBiscuit==false) {
    ^