methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	while (estSurBiscuit==false) {
    	if (estFaceMur()==true) {
      	left();
    	}
      forward();
  		if (getCouleurSol()==Color.greeen) {
      	brushDown(); forward(); brushUp();
    	} else {
      	backward(); left();
    	}
		}
} 
  
